<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="40dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/song_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <ImageView
            android:id="@+id/glide_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/image_info" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="0.1">

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/begin_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/begin_song"
            android:text="@string/start_song"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/duration_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/duration_song"
            android:text="@string/end_song"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <ImageButton
            android:id="@+id/image_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/image_previous"
            android:contentDescription="@string/image_info"
            android:src="@mipmap/ic_loop_black_36dp" />

        <ImageButton
            android:id="@+id/image_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/image_play"
            android:contentDescription="@string/image_info"
            android:src="@mipmap/ic_fast_rewind_black_36dp" />

        <ImageButton
            android:id="@+id/image_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/image_info"
            android:src="@mipmap/ic_play_circle_outline_black_36dp" />

        <ImageButton
            android:id="@+id/image_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/image_play"
            android:contentDescription="@string/image_info"
            android:src="@mipmap/ic_fast_forward_black_36dp" />

        <ImageButton
            android:id="@+id/image_shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/image_next"
            android:contentDescription="@string/image_info"
            android:src="@mipmap/ic_shuffle_black_36dp" />
    </RelativeLayout>

</LinearLayout>